--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://postgres:user@localhost:5432/qrdb?schema=public"
 PORT=3000
-Baseurl=http://localhost:
+Baseurldev=http://localhost:
+Baseurl=https://qrcode-generator-57jw.onrender.com/
