--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NODE_ENV=production # or development
 DATABASE_URL="postgresql://postgres:user@localhost:5432/qrdb?schema=public"
 PORT=3000
 Baseurldev=http://localhost:
