--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@nestjs/axios": "^0.0.6",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.7",
     "@prisma/client": "^4.0.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "qrcode": "^1.5.0",
     "rxjs": "^7.5.0"
