--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-NODE_ENV=production # or development
+
 DATABASE_URL="postgresql://postgres:user@localhost:5432/qrdb?schema=public"
 PORT=3000
 Baseurldev=http://localhost:
 Baseurl=https://qrcode-generator-57jw.onrender.com/
+NODE_ENV=production
