--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-
-DATABASE_URL="postgresql://postgres:user@localhost:5432/qrdb?schema=public"
+DATABASE_URL="postgresql://postgres:EjhvRbRNwzricLoLNeAEZrppxGEFoQun@mainline.proxy.rlwy.net:32666/railway?schema=public"
 PORT=3000
 Baseurldev=http://localhost:
 Baseurl=https://qrcode-generator-57jw.onrender.com/
