--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "qr-code-server",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
-    "start": "nest start",
-    "dev": "nest start --watch --tsc",
-    "build": "nest build",
-    "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
-    "prisma:migrate:deploy": "prisma migrate deploy --schema=./src/prisma/schema.prisma",
-    "prestart": "npm run prisma:generate",
-    "postinstall": "npm run prisma:generate"
-  },
+  "start": "nest start",
+  "dev": "nest start --watch --tsc",
+  "build": "nest build",
+  "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
+  "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
+  "prisma:migrate:deploy": "prisma migrate deploy --schema=./src/prisma/schema.prisma",
+  "prestart": "npm run prisma:generate",
+  "postinstall": "npm run prisma:generate"
+},
   "dependencies": {
-    "@nestjs/axios": "^4.0.0",
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
-    "@nestjs/platform-express": "^11.1.3",
+    "@nestjs/axios": "^0.0.6",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.4.7",
     "@prisma/client": "^4.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
@@ -23,7 +24,7 @@
     "rxjs": "^7.5.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.7",
+    "@nestjs/cli": "^8.0.0",
     "@types/express": "^5.0.3",
     "@types/node": "^16.0.0",
     "@types/qrcode": "^1.5.5",
