--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL="postgresql://postgres:EjhvRbRNwzricLoLNeAEZrppxGEFoQun@mainline.proxy.rlwy.net:32666/railway?schema=public"
 PORT=3000
 Baseurldev=http://localhost:
-Baseurl=https://qrcode-generator-57jw.onrender.com/
+Baseurl=https://qrcodegenerator-d4hc.onrender.com
 NODE_ENV=production
