--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DATABASE_URL="postgresql://postgres:EjhvRbRNwzricLoLNeAEZrppxGEFoQun@mainline.proxy.rlwy.net:32666/railway?schema=public"
+#DATABASE_URL="postgresql://postgres:user@localhost:5432/qrdb?schema=public"
 PORT=3000
 Baseurldev=http://localhost:
-Baseurl=https://qrcodegenerator-d4hc.onrender.com
+Baseurl=https://qrcodegenerator-production-52b0.up.railway.app/
 NODE_ENV=production
