--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
   "start": "nest start",
   "dev": "nest start --watch --tsc",
-  "build": "nest build",
+  "build": "nest build && cp -r public views dist/",
   "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma",
   "prisma:migrate": "prisma migrate dev --schema=./src/prisma/schema.prisma",
   "prisma:migrate:deploy": "prisma migrate deploy --schema=./src/prisma/schema.prisma",
