--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://username:password@localhost:5432/your_database?connection_limit=20&pool_timeout=20"
+DATABASE_URL="postgresql://postgres:EjhvRbRNwzricLoLNeAEZrppxGEFoQun@mainline.proxy.rlwy.net:32666/railway?connection_limit=20&pool_timeout=20"
 PORT=3000
 Baseurldev=http://localhost:
 Baseurl=https://qrcodegenerator-production-52b0.up.railway.app/
